--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,9 @@
-spring.application.name=demo
-spring.datasource.url=jdbc:postgresql://localhost:5432/spring
+# Настройки базы данных
+spring.datasource.url=jdbc:postgresql://localhost:5432/spring1
 spring.datasource.username=postgres
 spring.datasource.password=coconimo00F
 spring.datasource.driver-class-name=org.postgresql.Driver
-spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+
+# Настройки Hibernate
 spring.jpa.hibernate.ddl-auto=update
-
-
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
